[project]
name="smarte_regelungen"
version="2025.1.0"
authors=[
	{name = "Alexander Göbel", email="alexander.goebel@uni-a.de"}
]
readme="README.md"
requires-python="~=3.13"
dependencies=[
	"av",
	"control",
	"gymnasium",
	"imageio",
	"ipykernel",
	"jupyter",
	"jupyterlab",
	"keras",
	"matplotlib",
	"notebook",
	"numpy",
	"pandas",
	"pillow",
	"pygame-ce",
	"scikit-fuzzy",
	"scikit-learn",
	"scipy",
	"sympy",
	"tensorflow",
	"tqdm",
	"transformers"
]

[project.scripts]
smarte-regelungen = "jupyterlab.labapp:main"

[tool.uv.build-backend]
module-name = []

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

